--- a/src/Microsoft.AspNetCore.DataProtection.Mongo.csproj
+++ b/src/Microsoft.AspNetCore.DataProtection.Mongo.csproj
@@ -1,10 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
 	<Description>Support for storing data protection keys in MongoDB.</Description>
 	<TargetFramework>netstandard2.0</TargetFramework>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<Authors>EdwOK</Authors>
+	<Version>1.0.0</Version>
 	<PackageTags>aspnetcore;dataprotection;mongodb</PackageTags>
+	<PackageProjectUrl>https://github.com/EdwOK/Microsoft.AspNetCore.DataProtection.Mongo</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/EdwOK/Microsoft.AspNetCore.DataProtection.Mongo</RepositoryUrl>
 	<IsPackable>true</IsPackable>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
