--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,9 @@
 name: publish to nuget
+
 on:
   push:
-    branches:
-      - master # Default release branch
+    branches: [ main ]
+
 jobs:
   publish:
     name: build, pack & publish
